--- a/public/notes.html
+++ b/public/notes.html
@@ -17,8 +17,9 @@
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
-      <i class="fas fa-save text-light save-note"></i>
-      <i class="fas fa-pen text-light new-note"></i>
+      <button type="button" class="btn btn-primary"><i class="fas fa-save text-light save-note"></i></button>
+      <button type="button" class="btn btn-primary"><i class="fas fa-pen text-light new-note"></i></button>
+
     </div>
   </nav>
   <div class="container-fluid">
@@ -39,3 +40,16 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+  const saveBtn = document.querySelector('.save-note');
+saveBtn.addEventListener('click', (e) => {
+  e.preventDefault();
+
+  let newItem ={
+    noteTitle : ,
+    noteText : ,
+
+  }
+})
+</script>
