--- a/public/notes.html
+++ b/public/notes.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/CSS/styles.css">
+  <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
+
 </head>
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Note Taker
+    <a class="navbar-brand" style=""href="index.html">Note Taker
     </a>
     <div class="icons">
       <button type="button" class="btn btn-primary"><i class="fas fa-save text-light save-note"></i></button>
