--- a/public/notes.html
+++ b/public/notes.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" style=""href="index.html">Note Taker
+    <a class="navbar-brand" href="index.html">Note Taker
     </a>
     <div class="icons">
       <button type="button" class="btn btn-primary"><i class="fas fa-save text-light save-note"></i></button>
